ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-cicd-webpage-ingress
  namespace: ced-devops-cicd  # Specify your namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: chdevops.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-cicd-webpage
                port:
                  number: 80
